Add Header and styles

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,6 @@
 $gray-400: rgba(32, 32, 32, 1);
 $primary: #000000;
-$secondary: #ffffff
+$secondary: #ffffff;
 
 
 @import 'bootstrap/scss/bootstrap.scss';
