--- a/src/App.scss
+++ b/src/App.scss
@@ -5,43 +5,9 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+@font-face {
+  font-family: 'Playfair Display';
+  src: url("src/assets/Fonts/PlayfairDisplay-VariableFont_wght.ttf") format("truetype");
 }
 
 .hero-section-container {
@@ -58,7 +24,7 @@
   p,
   a,
   h1 {
-    color: var(--bs-gray-400);
+    color: white;
   }
 
   .btns-wrapper {
@@ -71,4 +37,86 @@
 p,
 a {
   color: var(--bs-gray-400);
+  font-family: 'Playfair Display', serif;
+}
+
+.menu-btn {
+  display: flex;
+  top: 0;
+  right: 0;
+  z-index: 20;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  color: black;
+  border: 0;
+  background-color: white;
+  margin: 20px;
+  
+  .menu-icon-container {
+
+    position: absolute;
+    width: 10px;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+
+    span {
+      background-color: #161412;
+      position: absolute;
+      height: 2px;
+      transition-duration: 300ms;
+      transition-property: transform;
+      transition-timing-function: ease-in-out;
+    }
+
+    .icon-line {
+      width: 30px;
+    }
+
+    .icon-line:first-child {
+      top: 0;
+      transform: translateY(-0.375rem);
+    }
+
+    .icon-line:nth-child(2) {
+      top: 2px;
+      transform: translateY(-0.375rem);
+      transition-property: all;
+      transition-duration: 300ms;
+      transition-delay: 200ms;
+      opacity: 1;
+    }
+
+    .icon-line:last-child {
+      top: 6px;
+      transform: translateY(0.375rem);
+    }
+  }
+
+  &.expanded {
+    background-color: #161412;
+
+
+    span {
+      background-color: white;
+    }
+
+    .icon-line:nth-child(2) {
+      width: 0;
+      opacity: 0.5;
+    }
+
+    .icon-line:first-child {
+      transform: translateY(3px) rotate(135deg);
+      transition-delay: 200ms;
+    } 
+
+    .icon-line:last-child {
+      transform: translateY(-3px) rotate(-135deg);
+      transition-delay: 200ms;
+    } 
+  }
+
+
 }
